another update of reqs

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 aiohttp==3.7.4.post0
 asyncpg
 colorama==0.4.4
-git+https://github.com/Rapptz/discord.py
+discord.py==2.0.0
 humanfriendly==10.0
 python-dotenv==0.20.0
 nudepy==0.5.1
